# waifu-sprites

./: .gitignore  Cargo.toml  LICENSE  README.md  __init__.py  chat_manager.js  config.json  index.html  plugin.yaml  query_messages.py  query_sessions.py  send-tts.ps1  server.js  tmp.py  tts_server.py  update.md  waifu_hook.py
dashboard/: manifest.json  plugin_api.py
docs/: index.html
src/: README.md  main.rs  waifu.py  waifu_hook.py
