[package]
name = "waifu-sprites"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["all_loaders", "image", "svg"] }
image = { version = "0.24", features = ["png", "jpeg"] }
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
